--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@
 }
 .pai{
 	background-color: aquamarine;
+display: flex;
+flex-direction: row;
+justify-content: center;
 }
 .pai2{
 	background-color:chocolate;
@@ -21,11 +24,16 @@
 	background-color:cyan;
 }
 
-.filhio, .filhio2, .filhio3, .filio4 {
+.filhio, .filhio2, .filhio3, .filhio4 {
 	background-color: blueviolet;
 	min-width: 200px;
 	min-height: 200px;
 	margin: 10px;
+	display: flex;
+	justify-content: start;
+	align-items: center;
+	flex-direction: row;
+
 }
 
 .neto, .neto2, .neto4 {
